<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicioFragment"
            android:icon="@drawable/vector_casa"
            android:title="Inicio"
            />
        <item
            android:id="@+id/notificacionesFragment"
            android:icon="@drawable/vector_notificaciones"
            android:title="Notificaciones"
            />
        <item
            android:id="@+id/altaObjetoPerdidoFragment"
            android:icon="@drawable/vector_agregar_publicacion"
            android:title="@string/menu_alta_perdido" />
        <item
            android:id="@+id/altaObjetoEncontradoFragment"
            android:icon="@drawable/vector_agregar_publicacion"
            android:title="@string/menu_alta_encontrado" />
        <item
            android:id="@+id/MisPublicacionesFragment"
            android:icon="@drawable/vector_mispublicaciones"
            android:title="Mis Publicaciones" />
        <item
            android:id="@+id/mensajeriaInternaFragment"
            android:icon="@drawable/vector_chat"
            android:title="Mensajeria" />
        <item
            android:id="@+id/VerMapaFragment"
            android:icon="@drawable/vector_mapa"
            android:title="@string/menu_mapa"/>

        <item
            android:id="@+id/reportesFragment"
            android:icon="@drawable/vector_reportes"
            android:title="@string/menu_reportes" />
        <item
            android:id="@+id/ContactarSoporteFragment"
            android:icon="@drawable/vector_soporte"
            android:title="@string/menu_soporte"  />
        <item
            android:id="@+id/panelAdministracionFragment"
            android:icon="@drawable/vector_panel_administracion_24"
            android:title="Panel de administración"  />
        <item
            android:id="@+id/cerrar_sesion"
            android:icon="@drawable/vector_cerrarsesion"
            android:title="@string/menu_cerrar_sesion" />
    </group>
</menu>